# sdl-tictactoe

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SDL TicTacToe.sln  build-wasm.bat
SDL TicTacToe/: ATurnController.cpp  ATurnController.h  CPUTurnController.cpp  CPUTurnController.h  Drawing.cpp  Drawing.h  Field.cpp  Field.h  HumanTurnController.cpp  HumanTurnController.h  IRenderable.h  ITurnsReceiver.h  IUpdatable.h  Input.cpp  Input.h  Random.cpp  Random.h  SDL TicTacToe.vcxproj  SDL TicTacToe.vcxproj.filters  SourceState.cpp  SourceState.h  TicTacToeGame.cpp  TicTacToeGame.h  Tokens.h  TurnMonitor.cpp  TurnMonitor.h  TurnsScheduler.cpp  TurnsScheduler.h  program.cpp
public-html/: index.html  run_testing_server.bat
